fixed 'message' container length, added word-wrap

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -84,6 +84,7 @@ section {
 		flex-direction: column-reverse;
    		overflow-y: scroll;
    		max-height: -webkit-fill-available;
+   		word-wrap: break-word;
 
    		.sign {
    			font-size: 0.8rem;
@@ -103,8 +104,7 @@ section {
 	#input {
 		margin-top: 10px;
 		#message {
-			flex-grow: 1;
-			margin-right:10px;
+			width: calc(100% - 20px);
 			border: none;
 			padding: 10px;
 			&:focus {
